# EAM

./: .gitignore  README.md  code_rules.txt  code_tasks.md
eam/: .env.example  Cargo.toml
eam/src/: main.rs
eam/src/config/: mod.rs
eam/src/exchanges/: binance.rs  bitget.rs  bitmex.rs  bybit.rs  coinbase.rs  gateio.rs  htx.rs  kraken.rs  kucoin.rs  mexc.rs  mod.rs  monitor.rs  okx.rs  upbit.rs
eam/src/models/: announcement.rs
eam/src/utils/: mod.rs
