[package]
name = "exchange-announcement-monitoring"
version = "0.1.0"
edition = "2021"
authors = ["Exchange Monitoring Team"]
description = "A Rust application to monitor cryptocurrency exchange announcements"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
reqwest = { version = "0.11.27", features = ["json"] }
scraper = "0.17"
chrono = { version = "0.4.35", features = ["serde"] }
async-trait = "0.1.79"
thiserror = "1.0"
url = "2.4"
once_cell = "1.17"
regex = "1.8"
html-escape = "0.2"
rand = "0.8.5"
lazy_static = "1.4.0"
